--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bree": "^9.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.5",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
     "sequelize": "^6.20.1",
